fix: customers card too long on mobile

--- a/src/app.css
+++ b/src/app.css
@@ -20,16 +20,15 @@
 @layer components {
     .btn-primary {
         @apply text-green-50 bg-green-700 hover:bg-green-600 active:bg-green-600
-        transition-colors duration-300 ease-in-out font-bold uppercase flex gap-2 items-center justify-center rounded-lg p-4;
+        font-bold uppercase flex gap-2 items-center justify-center rounded-lg p-4;
     }
     .btn-secondary {
         @apply text-gray-900 bg-gray-300 hover:bg-gray-200 active:bg-gray-200
         dark:text-green-50 dark:bg-gray-800 dark:hover:bg-gray-700 dark:active:bg-gray-700
-        transition-colors duration-300 ease-in-out font-bold uppercase flex gap-2 items-center justify-center rounded-lg p-4;
+        font-bold uppercase flex gap-2 items-center justify-center rounded-lg p-4;
     }
     .btn-danger {
-        @apply flex items-center p-2 rounded-md bg-red-500 hover:bg-red-700 active:bg-red-700
-        transition-colors duration-300 ease-in-out;
+        @apply flex items-center p-2 rounded-md bg-red-500 hover:bg-red-700 active:bg-red-700;
     }
     .btn-link {
         @apply text-gray-900 hover:text-gray-700 active:text-gray-700
